[tool.poetry]
name = "ai-genai-ai-gateway"
version = "1.0.0"
description = "Multi-provider AI Gateway with rate limiting, fallback routing, caching, and cost tracking per tenant"
authors = ["Saurabh Herwadkar"]
readme = "README.md"
license = "MIT"
packages = [{include = "ai_gateway", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
anthropic = "^0.55.0"
openai = "^1.82.0"
fastapi = "^0.116.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.11.0"
pydantic-settings = "^2.9.0"
pyyaml = "^6.0.2"
structlog = "^25.1.0"
httpx = "^0.28.0"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.0"
pytest-mock = "^3.14.0"
ruff = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/ai_gateway --cov-report=term-missing --cov-report=html"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "COM", "C4", "PT"]
ignore = ["S101", "COM812"]

[tool.ruff.lint.isort]
known-first-party = ["ai_gateway"]
